--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="intro-img">
-                <img src="../Projeto/assets/img/javascript.svg" alt="Logo de HTML, CSS e JS.">
+                <img src="./assets/img/javascript.svg" alt="Logo de HTML, CSS e JS.">
             </div>
 
         </div>
@@ -269,7 +269,7 @@
             </div>
 
             <div class="intro-img">
-                <img src="../Projeto/assets/img/menssage.svg" alt="Imagem de logo de menssage">
+                <img src="./assets/img/menssage.svg" alt="Imagem de logo de menssage">
             </div>
 
             <div class="contact-form">
